Fixed the dd task issue as well as adjusted backface visibility issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,14 +11,14 @@ input[type='text'] {
     display:flex;
     justify-content: center;
     width: 100%;
-    height: 100px;
-    margin-bottom: 30px;
-    margin-top: 30px;
+    height: 100%;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
 
 #date_title {
     font-family: 'Cinzel', serif;
-    font-size: 80px;
+    font-size: 4rem;
     font-weight: 600;
     color:#FF6EC7;
 }
@@ -26,6 +26,7 @@ input[type='text'] {
 .container-fluid {
     -webkit-perspective: 1000;
     position: relative;
+    margin-bottom: 2rem;
 }
 
 .task {
@@ -44,15 +45,20 @@ input[type='text'] {
     margin: 0 auto;
 }
 
-
 .back {
+    align-items: flex-start;
     -webkit-transform: rotateY(180deg);
     color:white;
+    display:none;
 }
 
 .show {
     -webkit-transform: rotateY(180deg);
     background-image: url("/static/img/starry_sky.jpg");
+}
+
+.task.show .back {
+    display:block;
 }
 
 .task li {
